# keep-in-touch

./: README.md  pyproject.toml  requirements-dev.txt  run_app.py
docs/: adding-new-field.md  development-guide.md
examples/: analyze_people.py  many_people.jsonl  sample_interactions.jsonl  sample_people.jsonl
examples/demo_data/: interactions.jsonl  people.jsonl
keep_in_touch/: __init__.py  __main__.py
keep_in_touch/app/: app_config.py  main.py
keep_in_touch/domain/: __init__.py  date_utils.py  display.py  formulas.py  models.py  person_filters.py  serialization.py  validation.py
keep_in_touch/services/: __init__.py  ids.py  import_export_service.py  interaction_service.py  people_service.py
keep_in_touch/storage/: app_paths.py  app_settings.py  backup.py  csv_io.py  jsonl_store.py
keep_in_touch/ui/: app_icon.py  main_window.py  people_table.py  person_detail_panel.py  theme.py
keep_in_touch/ui/dialogs/: edit_interactions_dialog.py  edit_person_dialog.py  edit_socials_dialog.py  log_interaction_dialog.py
tests/: test_display.py  test_formulas.py  test_jsonl_store.py  test_person_filters.py  test_serialization.py  test_services.py
